--- a/client/src/components/Home.module.css
+++ b/client/src/components/Home.module.css
@@ -1,21 +1,34 @@
-.profileContainer {
-    width: 80%;
+.homeContainer {
+    border: 1px solid #dbdbdb;
+    width: 50%;
     margin: 0 auto;
     height: 90vh;
     overflow-y: scroll;
     padding: 10px;
     margin-top: 10px;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 10% 90%;
-    border: 1px solid #dbdbdb;
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
 }
 
-.profileContainer::-webkit-scrollbar {
+.profileContainer {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    row-gap: 250px;
+}
+
+.cardContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2%;
+    grid-template-rows: auto;
+    height: 100%;
+    width: 100%;
+}
+
+.homeContainer::-webkit-scrollbar {
     display: none;
 }
 
@@ -31,4 +44,39 @@
     height: 50px;
     width: 25px;
     border: 1px solid black;
+}
+
+.inputs {
+    height: 50px !important;
+}
+
+.dropdownContainer {
+    width: 100%;
+    border-bottom: 1px solid #dbdbdb;
+    padding-bottom: 10px;
+    margin-bottom: 1px;
+}
+
+
+
+@media screen and (max-width: 960px) {
+    .homeContainer {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .homeContainer {
+        width: 100%;
+    }
+    .cardContainer {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-gap: 2%;
+        grid-template-columns: 100%;
+        height: 100%;
+        width: 100%;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
 }
