--- a/client/src/components/Profile.module.css
+++ b/client/src/components/Profile.module.css
@@ -1,21 +1,35 @@
 .profileContainer {
-    width: 80%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    row-gap: 250px;
+    margin-top: 2%;
+}
+
+.container {
+    border: 1px solid #dbdbdb;
+    width: 50%;
     margin: 0 auto;
     height: 90vh;
     overflow-y: scroll;
     padding: 10px;
     margin-top: 10px;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 10% 90%;
-    border: 1px solid #dbdbdb;
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
 }
 
-.profileContainer::-webkit-scrollbar {
+.cardContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2%;
+    grid-template-rows: auto;
+    height: 100%;
+    width: 100%;
+}
+
+.container::-webkit-scrollbar {
     display: none;
 }
 
@@ -41,25 +55,54 @@
     /* margin-top: 20vh; */
     margin-top: 1%;
 }
+
 .imageContainer {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 10% 90%;
     padding: 8px;
 }
+
 .inputs {
     height: 25px;
     border: none;
     border-bottom: 1px solid #9455e0;
     border-radius: 0px;
 }
+
 .image {
     width: 50%;
     margin: auto auto;
     margin-top: 2%;
 }
-.container {
+
+.addContainer {
     width: 25%;
     margin: auto auto;
     margin-top: 4%;
+}
+
+@media screen and (max-width: 960px) {
+    .container {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .container {
+        width: 100%;
+    }
+    .cardContainer {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-gap: 2%;
+        grid-template-columns: 100%;
+        height: 100%;
+        width: 100%;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+    .addContainer {
+        width: 80%
+    }
 }
