--- a/client/src/components/auth/Auth.module.css
+++ b/client/src/components/auth/Auth.module.css
@@ -11,6 +11,7 @@
     margin-top: 20vh;
     border: 1px solid #dbdbdb;
 }
+
 .logo {
     width: 50%;
     height: 120px;
@@ -30,6 +31,7 @@ input {
 .submit {
     height: 100%;
 }
+
 .registerConatiner {
     display: grid;
     grid-template-columns: 100%;
@@ -42,4 +44,9 @@ input {
     margin-right: auto;
     margin-top: 20vh;
     border: 1px solid #dbdbdb;
+}
+
+@media screen and (max-width: 800px) {
+    .loginContainer {width: 80%;}
+    .registerConatiner {width: 80%;}
 }
