--- a/client/src/components/NavBar.module.css
+++ b/client/src/components/NavBar.module.css
@@ -1,6 +1,6 @@
 .navbar {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 20% 80%;
     height: 40px;
     padding-left: 25%;
     padding-right: 25%;
@@ -51,4 +51,11 @@ button {
     background-color: #9455e0;
     border-radius: 3px;
     height: 25px;
+}
+
+@media screen and (max-width: 800px) {
+    .navbar {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
